metadata/force-app/main/default/objects/Portal__c/Portal__c.object-meta.xml
<CustomObject>
    <label>Portal</label>
    <nameField>
        <displayFormat>P-{0000000}</displayFormat>
        <label>Portal Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Portals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>