metadata/force-app/main/default/objects/Portal__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>If Portal is owned by a Contact, what&apos;s their ID</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Portals</relationshipLabel>
    <relationshipName>Portals</relationshipName>
    <type>Lookup</type>
</CustomField>