metadata/force-app/main/default/objects/Portal__c/fields/Lead_Account_Owner__c.field-meta.xml
<CustomField>
    <fullName>Lead_Account_Owner__c</fullName>
    <formula>IF(ISBLANK(Contact__r.Id),Lead__r.Owner:User.Username,Contact__r.Account.Owner.Username)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead/Account Owner</label>
    <type>Text</type>
</CustomField>