metadata/force-app/main/default/objects/Portal__c/fields/Portal_ID__c.field-meta.xml
<CustomField>
    <fullName>Portal_ID__c</fullName>
    <label>Portal ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>