metadata/force-app/main/default/objects/Portal__c/fields/Portal_Type__c.field-meta.xml
<CustomField>
    <fullName>Portal_Type__c</fullName>
    <label>Portal Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Free</fullName>
                <default>true</default>
                <label>Free</label>
            </value>
            <value>
                <fullName>Paid</fullName>
            </value>
            <value>
                <fullName>Lapsed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>