metadata/force-app/main/default/objects/Portal__c/fields/Portal_URL__c.field-meta.xml
<CustomField>
    <fullName>Portal_URL__c</fullName>
    <label>Portal URL</label>
    <type>Url</type>
</CustomField>