metadata/force-app/main/default/objects/Portal__c/fields/User_email__c.field-meta.xml
<CustomField>
    <fullName>User_email__c</fullName>
    <label>User email</label>
    <type>Email</type>
</CustomField>