metadata/force-app/main/default/objects/Portal__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Portal_URL__c</columns>
    <columns>Portal_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>equals</operation>
        <value>twoa.bynder.com</value>
    </filters>
    <label>All</label>
</ListView>