metadata/force-app/main/default/objects/Portal__c/listViews/Paid.listView-meta.xml
<ListView>
    <fullName>Paid</fullName>
    <columns>NAME</columns>
    <columns>Portal_ID__c</columns>
    <columns>Portal_URL__c</columns>
    <columns>User_email__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Portal_Type__c</field>
        <operation>equals</operation>
        <value>Paid</value>
    </filters>
    <label>Paid</label>
</ListView>